apps/overlays/zion/homepage/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-traefik-outpost
  namespace: homepage
spec:
  type: ExternalName
  externalName: auth-traefik-outpost.authentik.svc.cluster.local
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.milanchis.com`) && PathPrefix(`/`)
      kind: Rule
      priority: 10
      services:
        - name: zion-homepage
          port: 80
          sticky:
            cookie:
              name: homepage-stickiness
              secure: true
              httpOnly: true
              sameSite: none
      middlewares:
        - name: zion-homepage-auth-middleware
        # - name: zion-homepage-cors-middleware
    - match: Host(`homepage.milanchis.com`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - name: zion-auth-traefik-outpost
          port: 9000

  tls:
    secretName: homepage-certificate-secret
